Enable call demo

--- a/kamailio-config/kamailio.cfg
+++ b/kamailio-config/kamailio.cfg
@@ -15,6 +15,7 @@ fork=yes
 children=4
 
 listen=udp:10.46.0.1:5060
+listen=udp:10.45.0.1:5060
 alias=ims.localdomain
 
 ####### Modules Section ########
@@ -42,6 +43,11 @@ modparam("usrloc", "db_url", DBURL)
 modparam("usrloc", "db_mode", 2)
 modparam("registrar", "method_filtering", 1)
 
+# Transaction module - increase timeouts for slow LTE network
+modparam("tm", "fr_timer", 30000)        # 30s final response timeout
+modparam("tm", "fr_inv_timer", 180000)   # 180s INVITE timeout
+modparam("tm", "auto_inv_100", 1)         # Auto send 100 Trying
+
 ####### Routing Logic ########
 request_route {
     xlog("L_INFO", "Request: $rm from $fu to $ru\n");
@@ -56,12 +62,42 @@ request_route {
         exit;
     }
 
-    if (is_method("REGISTER")) {
-        route(REGISTER);
+    # Handle mid-dialog requests (ACK, BYE etc after INVITE established)
+    if (has_totag()) {
+        if (loose_route()) {
+            if (is_method("BYE")) {
+                xlog("L_INFO", "BYE received, looking up destination\n");
+                # Need to lookup the actual contact for BYE
+                if (!lookup("location")) {
+                    xlog("L_WARN", "BYE: contact not found, trying relay anyway\n");
+                }
+            }
+            t_relay();
+            exit;
+        }
     }
 
-    if (is_method("INVITE|ACK|BYE|CANCEL")) {
+    if (is_method("REGISTER")) {
+        route(REGISTER);
+        exit;
+    }
+
+    if (is_method("INVITE")) {
         route(CALL);
+        exit;
+    }
+    
+    if (is_method("ACK")) {
+        # ACK without tag - just relay
+        t_relay();
+        exit;
+    }
+    
+    if (is_method("CANCEL")) {
+        if (t_check_trans()) {
+            t_relay();
+        }
+        exit;
     }
 
     sl_send_reply("404", "Not Found");
@@ -84,10 +120,25 @@ route[REGISTER] {
 route[CALL] {
     xlog("L_INFO", "CALL: $rm from $fu to $ru\n");
     
+    # Add record-route for stateful proxy
+    record_route();
+    
     if (!lookup("location")) {
+        xlog("L_ERR", "LOOKUP FAILED for $ru\n");
         sl_send_reply("404", "Not Found");
         exit;
     }
     
-    t_relay();
+    xlog("L_INFO", "LOOKUP SUCCESS: forwarding to $du\n");
+    
+    if (!t_relay()) {
+        xlog("L_ERR", "RELAY FAILED\n");
+        sl_reply_error();
+    }
+    exit;
+}
+
+# Handle replies
+onreply_route {
+    xlog("L_INFO", "REPLY: $rs $rr from $si:$sp\n");
 }
