--- a/srsran-config/enb.conf
+++ b/srsran-config/enb.conf
@@ -26,7 +26,7 @@ mme_addr = 127.0.0.2
 gtp_bind_addr = 127.0.1.1
 s1c_bind_addr = 127.0.1.1
 s1c_bind_port = 0
-n_prb = 50
+n_prb = 25
 #tm = 4
 #nof_ports = 2
 
@@ -80,8 +80,9 @@ rx_gain = 40
 #time_adv_nsamples = auto
 
 # Example for ZMQ-based operation with TCP transport for I/Q samples
+# Using broker ports: eNB TX->2100, eNB RX<-2101
 device_name = zmq
-device_args = fail_on_disconnect=true,tx_port=tcp://*:2000,rx_port=tcp://localhost:2001,id=enb,base_srate=23.04e6
+device_args = fail_on_disconnect=true,tx_port=tcp://*:2100,rx_port=tcp://localhost:2101,id=enb,base_srate=11.52e6
 
 #####################################################################
 # Packet capture configuration
