--- a/srsran-config/ue.conf
+++ b/srsran-config/ue.conf
@@ -42,8 +42,9 @@ tx_gain = 80
 #continuous_tx     = auto
 
 # Example for ZMQ-based operation with TCP transport for I/Q samples
+# UE1 via broker: UE1 TX->2001, UE1 RX<-2000
 device_name = zmq
-device_args = tx_port=tcp://*:2001,rx_port=tcp://localhost:2000,id=ue,base_srate=23.04e6
+device_args = tx_port=tcp://*:2001,rx_port=tcp://localhost:2000,id=ue1,base_srate=11.52e6
 
 #####################################################################
 # EUTRA RAT configuration
@@ -56,7 +57,7 @@ device_args = tx_port=tcp://*:2001,rx_port=tcp://localhost:2000,id=ue,base_srate
 # nof_carriers:       Number of carriers
 #####################################################################
 [rat.eutra]
-dl_earfcn = 2850
+dl_earfcn = 3350
 #nof_carriers = 1
 
 #####################################################################
