--- a/srsran-config/ue2.conf
+++ b/srsran-config/ue2.conf
@@ -140,7 +140,7 @@ file_max_size = -1
 mode = soft
 algo = milenage
 opc  = E8ED289DEBA952E4283B54E88E6183CA
-k    = 465B5CE8B199B49FAA5F0A2EE238A6BD
+k    = 465B5CE8B199B49FAA5F0A2EE238A6BC
 imsi = 001010000000002
 imei = 353490069873319
 #reader =
@@ -208,7 +208,7 @@ apn_protocol = ipv4
 # ip_netmask:           Netmask of the tun_srsue device. Default: 255.255.255.0
 #####################################################################
 [gw]
-netns = ue2
+#netns = ue1
 #ip_devname = tun_srsue
 #ip_netmask = 255.255.255.0
 
